--- a/daniel/templates/postagens/single.html
+++ b/daniel/templates/postagens/single.html
@@ -2,157 +2,14 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>NOVA</title>
+		<title>{{post.titulo}}</title>
 		
-		<!-- CSS -->
-		<link rel="stylesheet" href="css/style.css" type="text/css" media="screen" />
-		<link rel="stylesheet" href="css/social-icons.css" type="text/css" media="screen" />
-		<!--[if IE 8]>
-			<link rel="stylesheet" type="text/css" media="screen" href="css/ie8-hacks.css" />
-		<![endif]-->
-		<!-- ENDS CSS -->	
-		
-		<!-- GOOGLE FONTS 
-		<link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>-->
-		
-		<!-- JS -->
-		<script type="text/javascript" src="js/jquery-1.5.1.min.js"></script>
-		<script type="text/javascript" src="js/jquery-ui-1.8.13.custom.min.js"></script>
-		<script type="text/javascript" src="js/easing.js"></script>
-		<script type="text/javascript" src="js/jquery.scrollTo-1.4.2-min.js"></script>
-		<script type="text/javascript" src="js/jquery.cycle.all.js"></script>
-		<script type="text/javascript" src="js/custom.js"></script>
-		
-		<!-- Isotope -->
-		<script src="js/jquery.isotope.min.js"></script>
-		
-		<!--[if IE]>
-			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
-		
-		<!--[if IE 6]>
-			<script type="text/javascript" src="js/DD_belatedPNG.js"></script>
-			<script>
-	      		/* EXAMPLE */
-	      		//DD_belatedPNG.fix('*');
-	    	</script>
-		<![endif]-->
-		<!-- ENDS JS -->
-		
-		
-		<!-- Nivo slider -->
-		<link rel="stylesheet" href="css/nivo-slider.css" type="text/css" media="screen" />
-		<script src="js/nivo-slider/jquery.nivo.slider.js" type="text/javascript"></script>
-		<!-- ENDS Nivo slider -->
-		
-		<!-- tabs -->
-		<link rel="stylesheet" href="css/tabs.css" type="text/css" media="screen" />
-		<script type="text/javascript" src="js/tabs.js"></script>
-  		<!-- ENDS tabs -->
-  		
-  		<!-- prettyPhoto -->
-		<script type="text/javascript" src="js/prettyPhoto/js/jquery.prettyPhoto.js"></script>
-		<link rel="stylesheet" href="js/prettyPhoto/css/prettyPhoto.css" type="text/css" media="screen" />
-		<!-- ENDS prettyPhoto -->
-		
-		<!-- superfish -->
-		<link rel="stylesheet" media="screen" href="css/superfish.css" /> 
-		<link rel="stylesheet" media="screen" href="css/superfish-left.css" /> 
-		<script type="text/javascript" src="js/superfish-1.4.8/js/hoverIntent.js"></script>
-		<script type="text/javascript" src="js/superfish-1.4.8/js/superfish.js"></script>
-		<script type="text/javascript" src="js/superfish-1.4.8/js/supersubs.js"></script>
-		<!-- ENDS superfish -->
-		
-		<!-- poshytip -->
-		<link rel="stylesheet" href="js/poshytip-1.0/src/tip-twitter/tip-twitter.css" type="text/css" />
-		<link rel="stylesheet" href="js/poshytip-1.0/src/tip-yellowsimple/tip-yellowsimple.css" type="text/css" />
-		<script type="text/javascript" src="js/poshytip-1.0/src/jquery.poshytip.min.js"></script>
-		<!-- ENDS poshytip -->
-		
-		<!-- Tweet -->
-		<link rel="stylesheet" href="css/jquery.tweet.css" media="all"  type="text/css"/> 
-		<script src="js/tweet/jquery.tweet.js" type="text/javascript"></script> 
-		<!-- ENDS Tweet -->
-		
-		<!-- Fancybox -->
-		<link rel="stylesheet" href="js/jquery.fancybox-1.3.4/fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
-		<script type="text/javascript" src="js/jquery.fancybox-1.3.4/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
-		<!-- ENDS Fancybox -->
-		
-		
-
+		{% include "postagens/scripts.html" %}
 	</head>
 	
 	<body>
-
-			<!-- HEADER -->
-			<div id="header">
-				<!-- wrapper-header -->
-				<div class="wrapper">
-					<a href="index.html"><img id="logo" src="img/logo.png" alt="Nova" /></a>
-					<!-- search -->
-					<div class="top-search">
-						<form  method="get" id="searchform" action="#">
-							<div>
-								<input type="text" value="Search..." name="s" id="s" onfocus="defaultInput(this)" onblur="clearInput(this)" />
-								<input type="submit" id="searchsubmit" value=" " />
-							</div>
-						</form>
-					</div>
-					<!-- ENDS search -->
-				</div>
-				<!-- ENDS wrapper-header -->					
-			</div>
-			<!-- ENDS HEADER -->
-			
-			
-			<!-- Menu -->
-			<div id="menu">
-			
-			
-			
-				<!-- ENDS menu-holder -->
-				<div id="menu-holder">
-					<!-- wrapper-menu -->
-					<div class="wrapper">
-						<!-- Navigation -->
-						<ul id="nav" class="sf-menu">
-							<li><a href="index.html">Home<span class="subheader">Welcome</span></a></li>
-							<li><a href="features.html">Features<span class="subheader">Awesome options</span></a>
-								<ul>
-									
-									<li><a href="features-columns.html"><span> Columns layout</span></a></li>
-									<li><a href="features-accordion.html"><span> Accordion</span></a></li>
-									<li><a href="features-toggle.html"><span> Toggle box</span></a></li>
-									<li><a href="features-tabs.html"><span> Tabs</span></a></li>
-									<li><a href="features-infobox.html"><span> Text box</span></a></li>
-									<li><a href="features-monobox.html"><span> Icons</span></a></li>
-								</ul>
-							</li>
-							<li class="current-menu-item"><a href="blog.html">Blog<span class="subheader">Read our posts</span></a></li>
-							<li><a href="portfolio.html">Portfolio <span class="subheader">Showcase work</span></a></li>
-							<li><a href="gallery.html">Gallery<span class="subheader">Featured work</span></a>
-								<ul>
-									<li><a href="gallery.html"><span> Four columns</span></a></li>
-									<li><a href="gallery-3.html"><span> Three columns </span></a></li>
-									<li><a href="gallery-2.html"><span> Two columns </span></a></li>
-									<li><a href="video-gallery.html"><span> Video gallery </span></a></li>
-								</ul>
-							</li>
-							<li><a href="contact.html">Contact<span class="subheader">Get in touch</span></a></li>
-						</ul>
-						<!-- Navigation -->
-					</div>
-					<!-- wrapper-menu -->
-				</div>
-				<!-- ENDS menu-holder -->
-			</div>
-			<!-- ENDS Menu -->
-			
-			
-			
-
-			
+			{% include "postagens/header.html" %}
+						
 			<!-- MAIN -->
 			<div id="main">
 				<!-- wrapper-main -->
@@ -163,8 +20,7 @@
 						
 						<!-- title -->
 						<div id="page-title">
-							<span class="title">The Blog</span>
-							<span class="subtitle">Donec eu libero sit amet quam egestas semper.</span>
+							<span class="title">{{post.titulo}}</span>
 						</div>
 						<!-- ENDS title -->
 						
@@ -173,19 +29,17 @@
 						
 							<!-- post -->
 							<div class="post">
-								<h1><a href="single.html">Lorem ipsum dolor amet</a></h1>
-								
+							
 								<!-- shadow -->
 								<div class="thumb-shadow">
 								
 									<!-- post-thumb -->
 									<div class="post-thumbnail">
-										<img src="img/dummies/596x270.gif"  alt="Feature image" />
+										<img src={{ MEDIA_URL }}{{post.imagem}}  alt={{post.titulo}} />
 									</div>
 									<!-- ENDS post-thumb -->
 									<div>
-										<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus</p>
-										<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames, Pellentesque habitant morbi tristique senectus et netus et malesuada fames Pellentesque habitant morbi tristique senectus et netus et malesuada fames.</p>
+										<p>{{post.conteudo}}</p>
 			
 									</div>
 								</div>
@@ -193,8 +47,8 @@
 													
 								<!-- meta -->
 								<ul class="meta">
-									<li><strong>Posted on</strong> Dec 27th 2011 </li>
-									<li><strong>By</strong> <a href="#">Ansimuz</a></li> 
+									<li><strong>Publicado em</strong> {{post.datapublicacao}} </li>
+									<li><strong>Por</strong> <a href="#">{{post.usuario}}</a></li> 
 									<li> <strong>Posted in</strong> 
 										<div class="meta-tags">
 											<a href="#">Webdesign</a>
@@ -210,67 +64,37 @@
 								
 							</div>
 							<!-- ENDS post -->
-							
 							<!-- Comments-Block -->
 							<div id="comments-block">
-								<div class="n-comments">165</div> <div class="n-comments-text">comments</div>
-				
+								<div class="n-comments">{{comentarios.count}}</div> <div class="n-comments-text">
+								{% if comentarios.count > 1 %}
+									comentarios
+								{% else %}
+								    comentario
+								{% endif %}
+								</div>				
 								<!-- comments list -->
 								<ul class="commentlist">
+									{%for coment in comentarios%}
 									<li class="comment" >
 										<div  class="comment-body">
 											<div class="comment-author vcard">
-												<img alt='' src='img/dummies/avatar.jpg' class='avatar avatar-60 photo' height='60' width='60' />
-												<cite class="fn">admin</cite><span class="says"> says:</span>
+												<img alt='' src='{{STATIC_URL}}img/dummies/avatar.jpg' class='avatar avatar-60 photo' height='60' width='60' />
+												<cite class="fn">{{coment.nome}}</cite><span class="says"> disse:</span>
 											</div>
 							
 											<div class="comment-meta commentmetadata">
-												<a href="#">February 9, 2011 at 6:28 pm</a>
+												<a href="#">{{coment.datacomentario}}</a>
 											</div>
 							
-											<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget.</p>
+											<p>{{coment.comentario}}</p>
 							
 											<div class="reply">
 												<a class='comment-reply-link' href='/archives/196?replytocom=18#respond' onclick='return addComment.moveForm("div-comment-18", "18", "respond", "196")'>Reply</a>
 											</div>
 										</div>
 									</li>
-									<li class="comment" >
-										<div  class="comment-body">
-											<div class="comment-author vcard">
-												<img alt='' src='img/dummies/avatar.jpg' class='avatar avatar-60 photo' height='60' width='60' />
-												<cite class="fn">admin</cite><span class="says"> says:</span>
-											</div>
-							
-											<div class="comment-meta commentmetadata">
-												<a href="#">February 9, 2011 at 6:28 pm</a>
-											</div>
-							
-											<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget.</p>
-							
-											<div class="reply">
-												<a class='comment-reply-link' href='/archives/196?replytocom=18#respond' onclick='return addComment.moveForm("div-comment-18", "18", "respond", "196")'>Reply</a>
-											</div>
-										</div>
-									</li>
-									<li class="comment" >
-										<div  class="comment-body">
-											<div class="comment-author vcard">
-												<img alt='' src='img/dummies/avatar.jpg' class='avatar avatar-60 photo' height='60' width='60' />
-												<cite class="fn">admin</cite><span class="says"> says:</span>
-											</div>
-							
-											<div class="comment-meta commentmetadata">
-												<a href="#">February 9, 2011 at 6:28 pm</a>
-											</div>
-							
-											<p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget.</p>
-							
-											<div class="reply">
-												<a class='comment-reply-link' href='/archives/196?replytocom=18#respond' onclick='return addComment.moveForm("div-comment-18", "18", "respond", "196")'>Reply</a>
-											</div>
-										</div>
-									</li>
+									{% endfor %}
 								</ul>
 								<!-- ENDS comments list -->
 				
